[project]
name = "agent-cloud"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "mcp>=1.0.0",
    "state>=0.1.1.dev0",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
